Changes to main gameboard view, and beginnings of JSON functionality

--- a/Views/Cards/PlayerSelect.cshtml
+++ b/Views/Cards/PlayerSelect.cshtml
@@ -15,19 +15,19 @@
                         <form class="" action="players" method="post">
                             <div class="form-group">
                                 <p>Player 1 Name:</p>
-                                <input type="text" class="form-control ml-2" name="player1" id="player1" value=" " placeholder="..">
+                                <input type="text" class="form-control ml-2" name="player1" id="player1" placeholder="..">
                             </div>
                             <div class="form-group">
                                 <p>Player 2 Name:</p>
-                                <input type="text" class="form-control ml-2" name="player2" id="player2" value=" " placeholder="..">
+                                <input type="text" class="form-control ml-2" name="player2" id="player2" placeholder="..">
                             </div>
                             <div class="form-group">
                                 <p>Player 3 Name:</p>
-                                <input type="text" class="form-control ml-2" name="player3" id="player3" value=" " placeholder="..">
+                                <input type="text" class="form-control ml-2" name="player3" id="player3" placeholder="..">
                             </div>
                             <div class="form-group">
                                 <p>Player 4 Name:</p>
-                                <input type="text" class="form-control ml-2" name="player4" id="player4" value=" " placeholder="..">
+                                <input type="text" class="form-control ml-2" name="player4" id="player4" placeholder="..">
                             </div>
                             <button class="button ml-2">Start Game!</button>
                         </form>
