--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <script>
     $(document).ready(function(){
-
+        var GameMaster;
+        $("#PlayGame").click(function(){
+            $.get("/start",function(res){
+                GameMaster = res;
+            })
+        })
     })
 </script>
 <html lang="en">
@@ -14,57 +19,12 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <div class="rules bubble-border">
-                        <div class="row">
-                            <div class="col-12">
-                                <h2>Objective:</h2>
-                                <p>The goal is to obtain a hand that totals 31 in cards of one suit; or to have a hand at the showdown whose count in one suit is higher than that of any other player.</p>
-                                <h2>Card Values/Scoring</h2>
-                                <p>An Ace counts 11 points, face cards count 10 points, and all other cards count their face value</p>
-                                <h2>The Play:</h2>
-                                <p>Before play begins, all players put an equal amount of chips into a pot. The player on the dealer's left has the first turn. On each turn, a player may take one card from the widow and replace it with one card from his hand (face up). (Variation: Players may exchange any number of cards with the widow in this manner.)</p>
-                                <p>Players take turns, clockwise around the table, until one player is satisfied that the card values he holds will likely beat the other players. He indicates this by "knocking" on the table. All other players then get one more turn to exchange cards. Then there is a showdown in which the players reveal their hands and compare values. The player with the highest total value of cards of the same suit wins the pot.</p>
-                                <p>If there is a tie for the highest score, the player with the highest-ranking card wins. Example: K, Q, 6 (total 26) would beat Q, 9, 7 (also total 26). If there is a tie in the highest cards, the next highest cards are compared, and so on.</p>
-                                <p>Any time a player holds exactly 31, he may "knock" immediately, and he wins the pot. If a player knocks before the first round of exchanges have begun, the showdown occurs immediately with no exchange of cards.</p>
-                                <p>After the pot has been won, all the players put in chips for the next hand.</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="sidebar-rules">
-                                    <h2>31 by 3</h2>
-                                    <h4>Rule Reminders:</h4>
-                                    <div class="row">
-                                        <div class="col-6">
-                                            <ul>
-                                                <li>Try to total 31</li>
-                                                <li>Choose Cards in the same suit</li>
-                                                <li>Ace = 11</li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-6">
-                                            <ul>
-                                                <li>10-K are worth 10 points</li>
-                                                <li>Knock when you think you can beat everyone's hand value</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 clearfix">
-                                <div class="float-right">
-                            <!-- add transition here -->
-                                    <button>Got it! Let's Play!</button>
-                                </div>
-                                <div class="clearfix"></div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="mx-auto">
+                    <button class="btn btn-lg btn-success" id="PlayGame">Play</button>
                 </div>
             </div>
+        </div>
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-md-3 sidebar">
                     <div class="sidebar-buffer bubble-border">
@@ -124,7 +84,7 @@
                         <div class="row hand-container">
                             <div class="col-12">
                                 <!-- START OF ONE HAND -->
-                                @foreach(var player in ViewBag.players)
+                                ****foreach(var player in ViewBag.players)
                                 {
                                     <div class="hand">
                                     <div class="tl-arrow"></div>
@@ -137,10 +97,10 @@
                                                 <div class="col-12">
                                                     <div class="row hand-labels">
                                                         <div class="col-12 col-md-6">
-                                                            <h3>@player.Value.name</h3>
+                                                            <h3>****player.Value.name</h3>
                                                         </div>
                                                         <div class="col-12 col-md-6">
-                                                            <h3>@player.Value.tokens</h3>
+                                                            <h3>****player.Value.tokens</h3>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -269,6 +229,58 @@
                                 }
                                 <!-- END OF HAND  --><!-- START OF ONE HAND -->
                                 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                        <div class="row">
+                <div class="col-12">
+                    <div class="rules bubble-border">
+                        <div class="row">
+                            <div class="col-12">
+                                <h2>Objective:</h2>
+                                <p>The goal is to obtain a hand that totals 31 in cards of one suit; or to have a hand at the showdown whose count in one suit is higher than that of any other player.</p>
+                                <h2>Card Values/Scoring</h2>
+                                <p>An Ace counts 11 points, face cards count 10 points, and all other cards count their face value</p>
+                                <h2>The Play:</h2>
+                                <p>Before play begins, all players put an equal amount of chips into a pot. The player on the dealer's left has the first turn. On each turn, a player may take one card from the widow and replace it with one card from his hand (face up). (Variation: Players may exchange any number of cards with the widow in this manner.)</p>
+                                <p>Players take turns, clockwise around the table, until one player is satisfied that the card values he holds will likely beat the other players. He indicates this by "knocking" on the table. All other players then get one more turn to exchange cards. Then there is a showdown in which the players reveal their hands and compare values. The player with the highest total value of cards of the same suit wins the pot.</p>
+                                <p>If there is a tie for the highest score, the player with the highest-ranking card wins. Example: K, Q, 6 (total 26) would beat Q, 9, 7 (also total 26). If there is a tie in the highest cards, the next highest cards are compared, and so on.</p>
+                                <p>Any time a player holds exactly 31, he may "knock" immediately, and he wins the pot. If a player knocks before the first round of exchanges have begun, the showdown occurs immediately with no exchange of cards.</p>
+                                <p>After the pot has been won, all the players put in chips for the next hand.</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="sidebar-rules">
+                                    <h2>31 by 3</h2>
+                                    <h4>Rule Reminders:</h4>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <ul>
+                                                <li>Try to total 31</li>
+                                                <li>Choose Cards in the same suit</li>
+                                                <li>Ace = 11</li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-6">
+                                            <ul>
+                                                <li>10-K are worth 10 points</li>
+                                                <li>Knock when you think you can beat everyone's hand value</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12 clearfix">
+                                <div class="float-right">
+                            <!-- add transition here -->
+                                    <button>Got it! Let's Play!</button>
+                                </div>
+                                <div class="clearfix"></div>
                             </div>
                         </div>
                     </div>
