JSON game creation and card draw logic

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,28 +3,6 @@
     padding-bottom: 20px;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
 
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
@@ -32,4 +10,11 @@
     .carousel-caption {
         display: none;
     }
+}
+.fucking-work-please {
+    background-image: url('https://mdn.mozillademos.org/files/7693/catfront.png')
+}
+.c1 
+{
+    background-image: url("~/img/c1.png")
 }
