--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<script>
-    $(document).ready(function(){
-        var GameMaster;
-        $("#PlayGame").click(function(){
-            $.get("/start",function(res){
-                GameMaster = res;
-            })
-        })
-    })
-</script>
 <html lang="en">
     <!-- inser head -->
     @await Html.PartialAsync("Head.cshtml")
@@ -82,151 +72,8 @@
                 <div class="col-12 col-md-9">
                     <div class="game-area bubble-border">
                         <div class="row hand-container">
-                            <div class="col-12">
+                            <div class="col-12" id="player_hands">
                                 <!-- START OF ONE HAND -->
-                                ****foreach(var player in ViewBag.players)
-                                {
-                                    <div class="hand">
-                                    <div class="tl-arrow"></div>
-                                    <div class="tr-arrow"></div>
-                                    <div class="bl-arrow"></div>
-                                    <div class="br-arrow"></div>
-                                    <div class="row">
-                                        <div class="col-10">
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <div class="row hand-labels">
-                                                        <div class="col-12 col-md-6">
-                                                            <h3>****player.Value.name</h3>
-                                                        </div>
-                                                        <div class="col-12 col-md-6">
-                                                            <h3>****player.Value.tokens</h3>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <form action="" method="post">
-                                                        <div class="row">
-                                                            <div class="player-card col-12 col-md-6 col-lg-3">
-                                                                <div class="row">
-                                                                    <div class="col-12">
-                                                                        <div class="card-anchor">
-                                                                            <div class="m0a w100">
-                                                                                <img src="~/img/c1.png" alt="">
-                                                                            </div>
-                                                                            <!-- a card should go here -->
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="row">
-                                                                    <div class="col-12">
-                                                                        <!-- checkbox for card -->
-                                                                        <div class="m0a w100">
-                                                                            <input type="checkbox" class="tac check">
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="player-card col-12 col-md-6 col-lg-3">
-                                                                <div class="row">
-                                                                    <div class="col-12">
-                                                                        <div class="card-anchor">
-                                                                            <div class="m0a w100">
-                                                                                <img src="~/img/c1.png" alt="">
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="row">
-                                                                    <div class="col-12">
-                                                                        <!-- checkbox for card -->
-                                                                        <div class="m0a w100">
-                                                                            <input type="checkbox" class="tac check">
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="player-card col-12 col-md-6 col-lg-3">
-                                                                <div class="row">
-                                                                    <div class="col-12">
-                                                                        <div class="card-anchor">
-                                                                            <div class="m0a w100">
-                                                                                <img src="~/img/c1.png" alt="">
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="row">
-                                                                    <div class="col-12">
-                                                                        <!-- checkbox for card -->
-                                                                        <div class="m0a w100">
-                                                                            <input type="checkbox" class="tac check">
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <div class="player-card col-12 col-md-6 col-lg-3">
-                                                                <div class="row">
-                                                                    <div class="col-12">
-                                                                        <div class="card-anchor">
-                                                                            <div class="m0a w100">
-                                                                                <img src="~/img/c1.png" alt="">
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="row">
-                                                                    <div class="col-12">
-                                                                        <!-- checkbox for card -->
-                                                                        <div class="m0a w100">
-                                                                            <input type="checkbox" class="tac check">
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-2 hand-buttons">
-                                            <div class="row">
-                                                <div class="col-4"></div>
-                                                <div class="col-4">
-                                                    <div class="turn-indicator">
-                                                        <i class="fas fa-child"></i>
-                                                    </div>
-                                                </div>
-                                                <div class="col-4"></div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <!-- feel free to put these inside forms if easier/required. Make sure the form is instantiated inside of the col-12 -->
-                                                    <!-- discard card button -->
-                                                    <button class="discard-btn">Discard</button>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <!-- laydown button -->
-                                                    <button>Knock</button>
-                                                    <!-- knock button -->
-                                                    <!-- <button class="hide">Lay Down!</button> -->
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <!-- Show Hide Hand button -->
-                                                    <button id="reveal_hand">Show</button>
-                                                    <button id="hide_hand" class="hidden">Hide</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                }
                                 <!-- END OF HAND  --><!-- START OF ONE HAND -->
                                 
                             </div>
