--- a/wwwroot/styles/base.scss
+++ b/wwwroot/styles/base.scss
@@ -148,6 +148,9 @@ body{
                             width: auto;
                             margin: 0 auto;
                         }
+                        .player-selected {
+                            border: 2px dashed green;
+                        }
                     }
                 }
             }
