edited rules, ui mods
added buttons for eventual functionality on player select

--- a/Views/Cards/PlayerSelect.cshtml
+++ b/Views/Cards/PlayerSelect.cshtml
@@ -29,6 +29,9 @@
                                 <p>Player 4 Name:</p>
                                 <input type="text" class="form-control ml-2" name="player4" id="player4" placeholder="..">
                             </div>
+                            <div>
+                                <button class="button ml-2">Add Player</button><button class="button ml-2">Remove Player</button>
+                            </div>
                             <button class="button ml-2">Start Game!</button>
                         </form>
                     </div>
