--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -87,29 +87,30 @@
                                 <h2>Card Values/Scoring</h2>
                                 <p>An Ace counts 11 points, face cards count 10 points, and all other cards count their face value</p>
                                 <h2>The Play:</h2>
-                                <p>Before play begins, all players put an equal amount of chips into a pot. The player on the dealer's left has the first turn. On each turn, a player may take one card from the widow and replace it with one card from his hand (face up). (Variation: Players may exchange any number of cards with the widow in this manner.)</p>
-                                <p>Players take turns, clockwise around the table, until one player is satisfied that the card values he holds will likely beat the other players. He indicates this by "knocking" on the table. All other players then get one more turn to exchange cards. Then there is a showdown in which the players reveal their hands and compare values. The player with the highest total value of cards of the same suit wins the pot.</p>
+                                <p>All players begin with 3 chips. On each turn, players take one card from either the top of the deck or from the widow (aka the discard pile). A turn ends by discarding a card from their hand.</p>
+                                <p>Players take turns, until one player is satisfied that the card values he holds will likely beat all other players and "knocks" on the table. Once a knock has been made, all other players get one more turn to exchange cards before the showdown where all players reveal their hands and compare values.</p>
+                                <h2>Scoring:</h2>
+                                <p>If the player who knocked does not have the highest scoring hand at the showdown, they lose a chip to the pot.  However, if they do have the highest scoring hand, the player with the lowest hand loses a chip to the pot instead.</p>
                                 <p>If there is a tie for the highest score, the player with the highest-ranking card wins. Example: K, Q, 6 (total 26) would beat Q, 9, 7 (also total 26). If there is a tie in the highest cards, the next highest cards are compared, and so on.</p>
-                                <p>Any time a player holds exactly 31, he may "knock" immediately, and he wins the pot. If a player knocks before the first round of exchanges have begun, the showdown occurs immediately with no exchange of cards.</p>
+                                <p>If at any point a player holds exactly 31 points during the game, or obtains three aces, the game immediately ends and all other players lose a chip to the pot.</p>
                                 <p>After the pot has been won, all the players put in chips for the next hand.</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-12">
                                 <div class="sidebar-rules">
-                                    <h2>31 by 3</h2>
-                                    <h4>Rule Reminders:</h4>
+                                    <h2>31 TLDR Rules:</h2>
                                     <div class="row">
                                         <div class="col-6">
                                             <ul>
-                                                <li>Try to total 31</li>
-                                                <li>Choose Cards in the same suit</li>
-                                                <li>Ace = 11</li>
+                                                <li>Try to total 31 points</li>
+                                                <li>Aces are worth 11 points</li>
+                                                <li>10-K are worth 10 points</li>
                                             </ul>
                                         </div>
                                         <div class="col-6">
                                             <ul>
-                                                <li>10-K are worth 10 points</li>
+                                                <li>Choose Cards in the same suit</li>
                                                 <li>Knock when you think you can beat everyone's hand value</li>
                                             </ul>
                                         </div>
