--- a/Views/Cards/PlayerSelect.cshtml
+++ b/Views/Cards/PlayerSelect.cshtml
@@ -13,16 +13,18 @@
             <div class="row">
                 <div class="col-12">
                     <div class="mx-auto w-50 p-5 bubble-border">
-                        <form class="" action="players" method="post" id="PlayerForm">
-                            <div class="form-group">
-                                <p>Player 1 Name:</p>
-                                <input type="text" class="form-control ml-2" name="player1" id="player1" placeholder="..">
+                        <form class="" action="players" method="post">
+                            <div id="PlayerForm">
+                                <div class="form-group" id="player1">
+                                    <p>Player 1 Name:</p>
+                                    <input type="text" class="form-control ml-2" name="player1"  placeholder="..">
+                                </div>
+                                <div class="form-group" id="player2">
+                                    <p>Player 2 Name:</p>
+                                    <input type="text" class="form-control ml-2" name="player2" placeholder="..">
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <p>Player 2 Name:</p>
-                                <input type="text" class="form-control ml-2" name="player2" id="player2" placeholder="..">
-                            </div>
-                            <button class="button ml-2">Start Game!</button>
+                            <button class="button ml-2" id="StartGame">Start Game!</button>
                         </form>
                             <button class="button ml-2 d-block" id="AddPlayer">Add Player</button>
                             <button class="button ml-2" id="RemovePlayer">Remove Player</button>
