--- a/wwwroot/styles/modules/_colors.scss
+++ b/wwwroot/styles/modules/_colors.scss
@@ -20,6 +20,7 @@ $t-opal: #6C6E58;
 $t-rain: #A4CFBE;
 $b-blue: rgba(5, 28, 55, 1);
 $b-blue-8: rgba(5, 28, 55, 0.8);
+$t-green: #657a64;
 
 
 .green-bg{
