inverse fix for display on shadowbox stuff

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -129,9 +129,9 @@
     </div>
 
 </div>
-<div class="shadowbox hide">
+<div class="shadowbox">
 </div>
-<div class="shadow-content-container hide">
+<div class="shadow-content-container ">
     <div class="inner-shadow">
         <div class="bubble-border">
             <div class="row">
