--- a/wwwroot/styles/base.scss
+++ b/wwwroot/styles/base.scss
@@ -4,6 +4,7 @@
 // import helpers
 @import "helpers/buttons";
 @import "helpers/shadowbox";
+@import "helpers/taunt";
 @import "helpers/mixins";
 
 // import responsive sheets
