--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -147,3 +147,13 @@
         </div>
     </div>
 </div>
+<!--
+I've positioned the first one relative to the first hand.
+we'll have to use jquery positioning to build one of these and set it to be the proper position when it is added to the page.
+most likely it will be positioning with a left of +40ish from where it calls it.
+ -->
+<div class="taunt-bubble">
+    <div class="bdr-arrow"></div>
+    <div class="bubble-arrow"></div>
+    <div class="text">text from taunt here</div>
+</div>
