refactored turn logic, added shadowbox for human multiplayer
end of round win condition needs to be fixed so all hands can be seen before next round begins

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -147,6 +147,11 @@
         </div>
     </div>
 </div>
+<!-- Change of Turn Indication for human players -->
+<div class="shadowbox" id="change_turn_shadow_box">
+</div>
+<div class="shadow-content-container" id="change_turn">
+</div>
 <!--
 I've positioned the first one relative to the first hand.
 we'll have to use jquery positioning to build one of these and set it to be the proper position when it is added to the page.
