Win results displaying
fixed some small bugs with next round and did some large refactors in aite.js

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="mx-auto">
-            <button class="button gbg-button" id="PlayGame">Play</button>
+            <button class="button gbg-button" id="PlayGame">Play</button><button class="button gbg-button" id="NextRound">NextRound</button>
         </div>
     </div>
 </div>
@@ -15,11 +15,6 @@
     <div class="row">
         <div class="col-12 col-md-3 sidebar">
             <div class="sidebar-buffer bubble-border">
-                <div class="row">
-                    <div class="col-12">
-                        <h3 class="tac">It is PlayerName's turn!</h3>
-                    </div>
-                </div>
                 <div class="row deck-area">
                     <div class="col-12">
                         <div class="row draw">
