--- a/Views/Cards/PlayerSelect.cshtml
+++ b/Views/Cards/PlayerSelect.cshtml
@@ -1,36 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-    <script src="~/js/PlayerSelect.js"></script>
-    <!-- inser head -->
-    @await Html.PartialAsync("Head.cshtml")
-    <!-- end insert head -->
-    <body class="">
-        <div class="header">
-            <h2 class="tac">Welcome to 31 by 3!</h2>
-            <a href="/" class="tal"></a>
+@await Html.PartialAsync("Head.cshtml")
+<!-- end insert head -->
+<div class="container">
+    <div class="header">
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="har1"></div>
+    <div class="har-low-1"></div>
+    <div class="har2"></div>
+    <div class="har-low-2"></div>
+    <div class="war1"></div>
+    <div class="war2"></div>
+    <div class="row">
+        <div class="col-4">
+            <h1 class="title">Casino 31</h1>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="mx-auto w-50 p-5 bubble-border">
-                        <form class="" action="players" method="post">
-                            <div id="PlayerForm">
-                                <div class="form-group" id="player1">
-                                    <p>Player 1 Name:</p>
-                                    <input type="text" class="form-control ml-2" name="player1"  placeholder="..">
-                                </div>
-                                <div class="form-group" id="player2">
-                                    <p>Player 2 Name:</p>
-                                    <input type="text" class="form-control ml-2" name="player2" placeholder="..">
-                                </div>
-                            </div>
-                            <button class="button ml-2" id="StartGame">Start Game!</button>
-                        </form>
-                            <button class="button ml-2 d-block" id="AddPlayer">Add Player</button>
-                            <button class="button ml-2" id="RemovePlayer">Remove Player</button>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="mx-auto w-50 p-5 bubble-border">
+            <form class="" action="players" method="post">
+                <div id="PlayerForm">
+                    <div class="form-group" id="player1">
+                        <p>Player 1 Name:</p>
+                        <input type="text" class="form-control ml-2" name="player1"  placeholder="...">
+                    </div>
+                    <div class="form-group" id="player2">
+                        <p>Player 2 Name:</p>
+                        <input type="text" class="form-control ml-2" name="player2" placeholder="...">
                     </div>
                 </div>
+                <button class="button ml-2" id="StartGame">Start Game!</button>
+            </form>
+                <button class="button ml-2 d-block" id="AddPlayer">Add Player</button>
+                <button class="button ml-2" id="RemovePlayer">Remove Player</button>
             </div>
         </div>
-    </body>
-</html>
+    </div>
+</div>
