--- a/wwwroot/styles/helpers/_shadowbox.scss
+++ b/wwwroot/styles/helpers/_shadowbox.scss
@@ -7,6 +7,7 @@
     top: 0px;
     left: 0px;
     display: none;
+    z-index: 1000;
 }
 .shadow-content-container{
     position: fixed;
@@ -17,6 +18,7 @@
     max-height: 600px;
     margin: 0 auto;
     display: none;
+    z-index: 1001;
     .inner-shadow{
         position: relative;
         top: 0;
@@ -25,6 +27,9 @@
         .bubble-border{
             width: 100%;
             height: auto;
+            background-color: $t-gray;
+            border: 11px solid $b-blue;
+            color: $b-blue;
         }
     }
 }
