tie/breaker and playbutton change

--- a/Views/Cards/Main.cshtml
+++ b/Views/Cards/Main.cshtml
@@ -36,11 +36,6 @@
         </div>
     </div>
     <div class="row">
-        <div class="mx-auto">
-            <button class="button gbg-button" id="PlayGame">Play</button><button class="button gbg-button" id="NextRound">NextRound</button>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-12 col-md-3 sidebar">
             <div class="sidebar-buffer bubble-border">
                 <div class="row deck-area">
@@ -71,6 +66,17 @@
                     </div>
                 </div>
             </div>
+            <!-- I'm sorry... -->
+            <div class="row">
+                <div class="col-12 sidebar">
+                    <div class="sidebar-buffer bubble-border">
+                        <div class="mx-auto">
+                            <button class="button gbg-button btn-sm" id="PlayGame">Play</button><button class="button gbg-button btn-sm" id="NextRound">NextRound</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <3 you... -->
         </div>
         <div class="col-12 col-md-9">
             <div class="game-area bubble-border">
