--- a/wwwroot/styles/helpers/_header.scss
+++ b/wwwroot/styles/helpers/_header.scss
@@ -110,7 +110,7 @@
         height: 0;
         border-right: 0px solid transparent;
         border-left: 69px solid transparent;
-        border-bottom: 24px solid $white;
+-        border-bottom: 24px solid $white;
         transform: rotate(-180deg);
     }
     .base-bar{
