--- a/wwwroot/styles/helpers/_taunt.scss
+++ b/wwwroot/styles/helpers/_taunt.scss
@@ -11,6 +11,7 @@
     box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
     color: $b-blue;
     font-size: 0.8em;
+    display: none;
     // padding: 5px;
     .bubble-arrow{
         position: relative;
